<package format="2">
  <name>rusty_system</name>
  <version>0.0.0</version>
  <description>A gaebo plugin with rust in it</description>
  <maintainer email="arjo@openrobotics.org">Arjo Chakravarty</maintainer>
  <license>Apache License 2.0</license>
  <author>Arjo Chakravarty</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>